--- a/src/app/component/guess-song/guess-song.component.css
+++ b/src/app/component/guess-song/guess-song.component.css
@@ -21,9 +21,9 @@
     position: relative;
 }
 
-  .leaderboard-container {
-    margin-top: 20px; /* Ajusta según sea necesario para evitar solapamientos con otros elementos */
-  }
+.leaderboard-container {
+    margin-top: 30px;
+}
 
 .title {
 
@@ -67,7 +67,7 @@
 }
 
 .hints {
-    margin-top: -6%;
+    margin-top: -3%;
     font-size: 20px;
     color: rgba(0, 0, 0, 0.8);
     display: flex;
@@ -93,7 +93,7 @@
 }
 
 .audioPlayer {
-    margin-top: 10px;
+    margin-top: 30px;
     display: flex;
     justify-content: center;
 }
@@ -137,10 +137,10 @@
 }
 
 .user-photo {
-    width: 40px;
-    height: 40px;
+    width: 38px;
+    height: 38px;
     border-radius: 50%;
-    margin-right: 10px;
+    margin-top: 5%;
 }
 
 .game-over {
@@ -162,4 +162,59 @@
 .animate__animated.animate__fadeInUpBig {
     --animate-duration: 0.3s;
 
+}
+
+/*-----------------------------------------------------------------*/
+
+.leaderboard__icon {
+    fill: #fff;
+    opacity: .35;
+    width: 50px;
+    position: absolute;
+    top: 50%;
+    left: var(--start);
+    transform: translate(-50%, -50%);
+}
+
+
+.leaderboard__profile {
+    width: 300px;
+    height: 60px;
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    align-items: center;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0 5px 7px -1px rgba(51, 51, 51, 0.23);
+    cursor: pointer;
+    transition: transform .25s cubic-bezier(.7, .98, .86, .98), box-shadow .25s cubic-bezier(.7, .98, .86, .98);
+    background-color: rgba(255, 255, 255, 0.9);
+    margin-top: 1%;
+}
+
+.leaderboard__profile:hover {
+    transform: scale(1.2);
+    box-shadow: 0 9px 47px 11px rgba(51, 51, 51, 0.18);
+}
+
+.leaderboard__name {
+    color: #979cb0;
+    font-weight: 600;
+    font-size: 16px;
+    letter-spacing: 0.64px;
+    margin-left: 12px;
+}
+
+.leaderboard__value {
+    color: #F58A97;
+    font-weight: 700;
+    font-size: 20px;
+    text-align: right;
+}
+
+.leaderboard__value>span {
+    opacity: .8;
+    font-weight: 600;
+    font-size: 13px;
+    margin-left: 3px;
 }
