--- a/src/app/component/social/social.component.css
+++ b/src/app/component/social/social.component.css
@@ -33,14 +33,16 @@
 }
 
 .follows {
-  margin-left: 12.3%;
-  margin-top: -30%;
+  margin-left: 11%;
+  margin-top: -38%;
+
 }
 
 .table-follows {
   border-radius: 10px;
   width: 300px;
-  margin-left: -25%;
+  margin-left: -18%;
+
 }
 
 
@@ -130,3 +132,64 @@ input::placeholder {
   width: 30px;
   border-radius: 1rem;
 }
+
+.compare-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px; 
+  margin-left:-70%;
+  margin-top: -10%;
+}
+
+/*---------------------------------*/
+.user-photo {
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
+  margin-top: 5%;
+
+}
+
+.leaderboard__icon {
+  fill: #fff;
+  opacity: .35;
+  width: 50px;
+  position: absolute;
+  top: 50%;
+  left: var(--start);
+  transform: translate(-50%, -50%);
+
+}
+
+
+.leaderboard__profile {
+  width: 270px;
+  height: 60px;
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  align-items: center;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0 5px 7px -1px rgba(51, 51, 51, 0.23);
+  cursor: pointer;
+  transition: transform .25s cubic-bezier(.7, .98, .86, .98), box-shadow .25s cubic-bezier(.7, .98, .86, .98);
+  background-color: rgba(255, 255, 255, 0.9);
+  margin-top: 1%;
+
+}
+
+.leaderboard__profile:hover {
+  transform: scale(1.2);
+  box-shadow: 0 9px 47px 11px rgba(51, 51, 51, 0.18);
+
+}
+
+.leaderboard__name {
+  color: #979cb0;
+  font-weight: 600;
+  font-size: 20px;
+  letter-spacing: 0.64px;
+  margin-left: 20px;
+
+}
+
