--- a/src/app/component/origin/origin.component.html
+++ b/src/app/component/origin/origin.component.html
@@ -8,8 +8,9 @@
                 <h2 class="tagline" class="animate__animated animate__tada" style="color: rgba(0,0,0,0.9);">
                     <strong>"Divertite un rato"</strong>
                 </h2>
-                <button type="button" class="btn btn-success" class="tagline" class="animate__animated animate__flash"
-                    (click)="login()">Login</button>
+                <div class="animate__animated animate__flash">
+                    <button class="btn btn-shine" (click)="login()">Login</button>
+                </div>
             </div>
         </div>
 
