--- a/src/app/component/guess-song/guess-song.component.css
+++ b/src/app/component/guess-song/guess-song.component.css
@@ -112,11 +112,6 @@
     justify-content: center;
 }
 
-.button {
-    margin-bottom: 6px;
-    margin: 0 5px;
-}
-
 .start {
     margin-top: 10px;
     display: flex;
@@ -218,3 +213,41 @@
     font-size: 13px;
     margin-left: 3px;
 }
+
+/*------------------------------boton---------------------------*/
+/* BUTTON BLUE */
+.btn-shine {
+    position: relative;
+    padding: 8px 30px; /* Reducido el padding */
+    font-family: 'Poppins', sans-serif;
+    font-size: 12px; /* Tamaño de fuente reducido */
+    border: none;
+    letter-spacing: 2px; /* Aumentado el espacio entre letras */
+    text-transform: uppercase;
+    border-radius: 8px; /* Reducido el radio de borde */
+    color: #fff;
+    cursor: pointer;
+    overflow: hidden;
+    background-image: linear-gradient(to right, #F58A97, #e04759);
+    margin-left: 10px; 
+    margin-bottom: 6px;
+    &::after {
+      content: "";
+      background: white;
+      position: absolute;
+      top: -30px; /* Ajustado la posición superior */
+      left: -40px; /* Ajustado la posición izquierda */
+      width: 30px; /* Reducido el ancho */
+      height: 90px; /* Reducido la altura */
+      opacity: 0.3;
+      border-radius: 8px; /* Reducido el radio de borde */
+      transform: rotate(35deg);
+      transition: all 650ms cubic-bezier(0.19, 1, 0.22, 1);
+    }
+  
+    &:hover::after {
+      left: 120%;
+      transition: all 650ms cubic-bezier(0.19, 1, 0.22, 1);
+    }
+  }
+  
