--- a/src/app/component/home/home.component.css
+++ b/src/app/component/home/home.component.css
@@ -13,32 +13,138 @@
   width: 100vw;
   height: 100vh;
   margin: 0;
-  overflow: hidden; 
+  overflow: hidden;
   z-index: -1;
 }
+
 .profileContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 150px; 
-    
-  }
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+ margin-left: 400px ;
+
+}
+
+.profilePhoto {
+  margin-bottom: 10px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.profilePhoto img {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+}
+
+.profileText {
+  margin-top: -55px;
+  margin-left: 70px;
+}
+/*----------------------------------------------------*/
+.persons-wrapper {
+  display: flex;
+  justify-content: space-between;
+  margin-left: 0px;
+  margin-top: -30px;
+}
+
+.object{
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  width: 280px;
+  margin-left: 20px;
+}
+
+.container {
+  border-radius: 50%;
+  height: 312px;
+  -webkit-tap-highlight-color: transparent;
+  transform: scale(0.48);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 400px;
+}
+.container:after {
+  content: "";
+  height: 10px;
+  position: absolute;
+  top: 390px;
+  width: 100%;
+}
+.container:hover {
+  transform: scale(0.54);
+}
+.container-inner {
+  position: relative;
+  transform-origin: 50%;
+  top: -160px;
+  right: 140px;
+}
+.circle {
+  background-color: #fee7d3;
+  border-radius: 50%;
+  cursor: pointer;
+  height: 380px;
+  left: 10px;
+  pointer-events: none;
+  position: absolute;
+  top: 210px;
+  width: 380px;
   
-  .profilePhoto {
-    margin-bottom: 10px;
-    width: 150px; 
-    height: 150px; 
-    border-radius: 50%; 
-    overflow: hidden; 
-  }
-  
-  .profilePhoto img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; 
-  }
-  
-  .profileText {
-    text-align: center;
-    margin-top: 10px; 
-  }
+}
+.img {
+  pointer-events: none;
+  position: relative;
+  transform: translateY(20px) scale(1.15);
+  transform-origin: 50% bottom;
+  transition: transform 300ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.container:hover .img {
+  transform: translateY(0) scale(1.2);
+}
+
+.img1 {
+  left: 40px;
+  top: 150px;
+  width: 320px;
+}
+.img2 {
+  left: 40px;
+  top: 150px;
+  width: 320px;
+}
+.img3 {
+  left: 90px;
+  top: 150px;
+  width: 320px;
+}
+
+.img4{
+  left: 20px;
+  top: 150px;
+  width: 350px;
+}
+
+.divider {
+  height: 6px;
+  width: 200px;
+}
+
+.name {
+  color: rgba(0, 0, 0, 0.80);
+  font-size: 35px;
+  font-weight: 600;
+  margin-top: 16px;
+  text-align: center;
+
+}
+.title {
+  color: rgba(0, 0, 0, 0.80);
+  font-family: arial;
+  font-size: 15.5px;
+  font-style: italic;
+  margin-top: 4px;
+}
