--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,13 +1,9 @@
-
 <div class="div-container">
   <div class="background">
     <app-navbar></app-navbar>
-    <!-- <button (click)="getTopArtists()">top artistas</button>
-    <button (click)="getTopSongs()">top songs</button>
-    <button (click)="onAddUser()">añadir user a bdd</button>
-    <button (click)="getUserData()">ver data</button>
-    <button (click)="onAddSong()">añadir canciones</button>-->
-    <div>
+
+   
+    
+
   </div>
-
-
+</div>
