Ultima version con dto y visual

--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -28,7 +28,7 @@
           </div>
         </div>
         <div class="divider" style=" background-color: #C193DC;"></div>
-        <div class="name" style="">"Guess the Song"</div>
+        <div class="name">"Guess the Song"</div>
         <div class="title text-center"><strong>¡Adivina la canción entre opciones aleatorias, pedi pistas y competi por
             los mejores puntajes!</strong></div>
       </div>
